# Music_Game

./: .gitignore  CMakeLists.txt  README.md  main.cpp  questions.json
assets/global/audio/: theme.m4a
include/: AudioManager.h  Button.h  Game.h  ImageQuestion.h  Question.h  QuestionManager.h  Quiz.h  SoundButton.h  TextQuestion.h  VideoQuestion.h  menu.h
src/: AudioManager.cpp  Button.cpp  Game.cpp  ImageQuestion.cpp  Menu.cpp  Question.cpp  QuestionManager.cpp  Quiz.cpp  SoundButton.cpp  TextQuestion.cpp  VideoQuestion.cpp  main.cpp
